syntax = "proto3";

package connectionservice;

option go_package = "openusp/pkg/proto/connectionservice";

// ConnectionService manages gRPC connections between OpenUSP services
service ConnectionService {
    // GetConnection returns a healthy connection to the specified service
    rpc GetConnection(GetConnectionRequest) returns (GetConnectionResponse);
    
    // GetConnectionStatus returns status of all managed connections
    rpc GetConnectionStatus(GetConnectionStatusRequest) returns (GetConnectionStatusResponse);
    
    // RegisterServiceDependency registers a service dependency for proactive connection management
    rpc RegisterServiceDependency(RegisterDependencyRequest) returns (RegisterDependencyResponse);
    
    // RefreshConnections forces refresh of connections to a service
    rpc RefreshConnections(RefreshConnectionsRequest) returns (RefreshConnectionsResponse);
}

// GetConnectionRequest requests a connection to a specific service
message GetConnectionRequest {
    string service_name = 1;        // Name of the service to connect to
    map<string, string> metadata = 2; // Optional metadata for connection selection
}

// GetConnectionResponse returns connection information
message GetConnectionResponse {
    bool success = 1;               // Whether connection was obtained successfully
    string error = 2;               // Error message if success is false
    string target = 3;              // Target address of the connection
    string state = 4;               // Current connection state
    int64 created_at = 5;           // Connection creation timestamp
    int64 last_used = 6;            // Last usage timestamp
    int32 error_count = 7;          // Number of errors on this connection
    map<string, string> metadata = 8; // Connection metadata
}

// GetConnectionStatusRequest requests status of connections
message GetConnectionStatusRequest {
    string service_name = 1;        // Optional: specific service name, empty for all
}

// GetConnectionStatusResponse returns connection status information
message GetConnectionStatusResponse {
    map<string, ServiceStatus> services = 1; // Status by service name
}

// ServiceStatus represents the status of connections to a specific service
message ServiceStatus {
    string service_name = 1;        // Name of the service
    int32 total_connections = 2;    // Total number of connections
    int32 healthy_connections = 3;  // Number of healthy connections
    bool circuit_open = 4;          // Whether circuit breaker is open
    bool is_healthy = 5;            // Overall health status
    int64 last_health_check = 6;    // Last health check timestamp
    int32 failure_count = 7;        // Number of consecutive failures
    repeated ConnectionDetail connections = 8; // Individual connection details
}

// ConnectionDetail provides details about a specific connection
message ConnectionDetail {
    int32 index = 1;                // Connection index in pool
    string target = 2;              // Target address
    string state = 3;               // gRPC connection state
    int64 last_used = 4;            // Last usage timestamp
    int32 error_count = 5;          // Number of errors
    int64 created_at = 6;           // Creation timestamp
}

// RegisterDependencyRequest registers a service dependency
message RegisterDependencyRequest {
    string service_name = 1;        // Name of the service that has the dependency
    string depends_on_service = 2;  // Name of the service being depended on
    int32 min_connections = 3;      // Minimum number of connections to maintain
    int32 max_connections = 4;      // Maximum number of connections to maintain
}

// RegisterDependencyResponse confirms dependency registration
message RegisterDependencyResponse {
    bool success = 1;               // Whether registration was successful
    string error = 2;               // Error message if success is false
}

// RefreshConnectionsRequest requests connection refresh for a service
message RefreshConnectionsRequest {
    string service_name = 1;        // Name of the service to refresh connections for
    bool force_recreate = 2;        // Whether to force recreation of all connections
}

// RefreshConnectionsResponse confirms connection refresh
message RefreshConnectionsResponse {
    bool success = 1;               // Whether refresh was successful
    string error = 2;               // Error message if success is false
    int32 connections_refreshed = 3; // Number of connections refreshed
    int32 connections_created = 4;   // Number of new connections created
}